--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2417,8 +2417,8 @@
   "container.urushi_auto_crafting_table": "自动工作台",
   "block.urushi.limonite_ore": "褐铁矿石",
    "block.urushi.chalcopyrite_ore": "黄铜矿石",
-   "key.urushi.category": "Urushi",
-   "key.urushi.connectionKey": "Switch Texture Connections for Framed Blocks",
+   "key.urushi.category": "漆MOD",
+   "key.urushi.connectionKey": "切换方块放置时材质的连接模式",
    "block.urushi.landscape_fusuma": "风景画纸拉门",
     "block.urushi.morning_glory_pot": "牵牛花爬藤盆栽",
     "block.urushi.tv": "电视",
@@ -2485,28 +2485,28 @@
    "entity.urushi.miso_ramen_food": "味噌拉面",
    "entity.urushi.tonkotsu_ramen_food": "豚骨拉面",
    "entity.urushi.minced_tuna_bowl_food": "金枪鱼泥盖饭",
-   "item.urushi.knockback_jufu_stamp": "Knockback Jufu Stamp",
-   "item.urushi.jump_jufu_stamp": "Jump Jufu Stamp",
-   "item.urushi.liana_jufu_stamp": "Liana Jufu Stamp",
-   "item.urushi.lava_generation_jufu_stamp": "Lava Generation Jufu Stamp",
-   "item.urushi.growth_jufu_stamp": "Growth Jufu Stamp",
-   "item.urushi.mountain_creation_jufu_stamp": "Mountain Creation Jufu Stamp",
-   "item.urushi.fluid_erasion_jufu_stamp": "Fluid Erasion Jufu Stamp",
-   "item.urushi.spike_jufu_stamp": "Spike Jufu Stamp",
-   "item.urushi.freezing_jufu_stamp": "Freezing Jufu Stamp",
-   "item.urushi.knockback_jufu": "Knockback Jufu",
-   "item.urushi.jump_jufu": "Jump Jufu",
-   "item.urushi.liana_jufu": "Liana Jufu",
-   "item.urushi.lava_generation_jufu": "Lava Generation Jufu",
-   "item.urushi.growth_jufu": "Growth Jufu",
-   "item.urushi.mountain_creation_jufu": "Mountain Creation Jufu",
-   "item.urushi.fluid_erasion_jufu": "Fluid Erasion Jufu",
-   "item.urushi.spike_jufu": "Spike Jufu",
-   "item.urushi.freezing_jufu": "Freezing Jufu",
-   "item.urushi.visualization_goggles": "Visualization Goggles",
-   "info.urushi.visualization_goggles": "When equipped, the path of Reiryoku transport becomes visible.",
-   "info.urushi.jufu_stamp1": "Solving puzzles in the structure of the wood circle, you can get one of the jufu stamps corresponding to the color of the puzzle you have aligned.",
-   "info.urushi.jufu_stamp2": "This stamp remains when crafting a Jufu with a Element Alter.",
+   "item.urushi.knockback_jufu_stamp": "退击之符印章",
+   "item.urushi.jump_jufu_stamp": "升腾之符印章",
+   "item.urushi.liana_jufu_stamp": "茑萝之符印章",
+   "item.urushi.lava_generation_jufu_stamp": "熔岩之符印章",
+   "item.urushi.growth_jufu_stamp": "养分之符印章",
+   "item.urushi.mountain_creation_jufu_stamp": "造山之符印章",
+   "item.urushi.fluid_erasion_jufu_stamp": "旱魃之符印章",
+   "item.urushi.spike_jufu_stamp": "棘刺之符印章",
+   "item.urushi.freezing_jufu_stamp": "静冻之符印章",
+   "item.urushi.knockback_jufu": "退击之符",
+   "item.urushi.jump_jufu": "升腾之符",
+   "item.urushi.liana_jufu": "茑萝之符",
+   "item.urushi.lava_generation_jufu": "熔岩之符",
+   "item.urushi.growth_jufu": "养分之符",
+   "item.urushi.mountain_creation_jufu": "造山之符",
+   "item.urushi.fluid_erasion_jufu": "旱魃之符",
+   "item.urushi.spike_jufu": "棘刺之符",
+   "item.urushi.freezing_jufu": "静冻之符",
+   "item.urushi.visualization_goggles": "灵力观测镜",
+   "info.urushi.visualization_goggles": "装备时可以观测到灵力传输的路径",
+   "info.urushi.jufu_stamp1": "Solving puzzles in the structure of the wood circle, you can get one of the之符印章s corresponding to the color of the puzzle you have aligned.",
+   "info.urushi.jufu_stamp2": "This stamp remains when crafting a 咒符 with a Element Alter.",
    "info.urushi.reiryoku_cost": "Required Reiryoku Amount :",
    "info.urushi.knockback_jufu1": "Blow mobs far away.",
    "info.urushi.jump_jufu1": "Launch mobs and inflict fall damage.",
@@ -2515,7 +2515,7 @@
    "info.urushi.growth_jufu1": "Give bonemeal effect to blocks in an area of 11×11×11.",
    "info.urushi.mountain_creation_jufu1": "Produce a sphere of Dirt and let it fall.",
    "info.urushi.mountain_creation_jufu2": "It is useful for creating mountains and manipulating the shape of the land.",
-   "info.urushi.fluid_erasion_jufu1": "Erase fluids in an area of 11 ×11.",
+   "info.urushi.fluid_erasion_jufu1": "Erase fluids in an area of 11×11.",
    "info.urushi.spike_jufu1": "Generate metal spikes and hurts mobs.",
    "info.urushi.spike_jufu2": "If a player is within about 25 blocks of a spike, damage from the spike is treated as an attack by the player, and the player can get rare drops and experience.",
    "info.urushi.freezing_jufu1": "Holds mobs for 5 seconds.",
@@ -2533,7 +2533,7 @@
    "block.urushi.earth_element_puzzle_block": "Earth Element Puzzle Block",
    "block.urushi.metal_element_puzzle_block": "Metal Element Puzzle Block",
    "block.urushi.water_element_puzzle_block": "Water Element Puzzle Block",
-   "block.urushi.freezing_display": "Ice from Freezing Jufu",
+   "block.urushi.freezing_display": "Ice from Freezing之符",
    "block.urushi.spike": "Spike Block"
 
 }
