finish translation for 6.2.0

--- a/src/main/resources/assets/urushi/lang/en_us.json
+++ b/src/main/resources/assets/urushi/lang/en_us.json
@@ -2511,7 +2511,7 @@
    "item.urushi.visualization_goggles": "Visualization Goggles",
    "info.urushi.visualization_goggles": "When equipped, the path of Reiryoku transport becomes visible.",
    "info.urushi.jufu_stamp1": "Solving puzzles in the structure of the wood circle, you can get one of the jufu stamps corresponding to the color of the puzzle you have aligned.",
-   "info.urushi.jufu_stamp2": "This stamp remains when crafting a Jufu with a Element Alter.",
+   "info.urushi.jufu_stamp2": "This stamp remains when crafting a Jufu with a Element Altar.",
    "info.urushi.reiryoku_cost": "Required Reiryoku Amount :",
    "info.urushi.knockback_jufu1": "Blow mobs far away.",
    "info.urushi.jump_jufu1": "Launch mobs and inflict fall damage.",
