--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2485,55 +2485,55 @@
    "entity.urushi.miso_ramen_food": "味噌拉面",
    "entity.urushi.tonkotsu_ramen_food": "豚骨拉面",
    "entity.urushi.minced_tuna_bowl_food": "金枪鱼泥盖饭",
-   "item.urushi.knockback_jufu_stamp": "退击之符印章",
-   "item.urushi.jump_jufu_stamp": "升腾之符印章",
-   "item.urushi.liana_jufu_stamp": "茑萝之符印章",
-   "item.urushi.lava_generation_jufu_stamp": "熔岩之符印章",
-   "item.urushi.growth_jufu_stamp": "养分之符印章",
-   "item.urushi.mountain_creation_jufu_stamp": "造山之符印章",
-   "item.urushi.fluid_erasion_jufu_stamp": "旱魃之符印章",
-   "item.urushi.spike_jufu_stamp": "棘刺之符印章",
-   "item.urushi.freezing_jufu_stamp": "静冻之符印章",
-   "item.urushi.knockback_jufu": "退击之符",
-   "item.urushi.jump_jufu": "升腾之符",
-   "item.urushi.liana_jufu": "茑萝之符",
-   "item.urushi.lava_generation_jufu": "熔岩之符",
+   "item.urushi.knockback_jufu_stamp": "打击之符刻印",
+   "item.urushi.jump_jufu_stamp": "跳跃之符刻印",
+   "item.urushi.liana_jufu_stamp": "茑之符刻印",
+   "item.urushi.lava_generation_jufu_stamp": "熔岩生成之符刻印",
+   "item.urushi.growth_jufu_stamp": "养分之符刻印",
+   "item.urushi.mountain_creation_jufu_stamp": "山地形成之符刻印",
+   "item.urushi.fluid_erasion_jufu_stamp": "旱魃之符刻印",
+   "item.urushi.spike_jufu_stamp": "棘之符刻印",
+   "item.urushi.freezing_jufu_stamp": "冻结之符刻印",
+   "item.urushi.knockback_jufu": "打击之符",
+   "item.urushi.jump_jufu": "跳跃之符",
+   "item.urushi.liana_jufu": "茑之符",
+   "item.urushi.lava_generation_jufu": "熔岩生成之符",
    "item.urushi.growth_jufu": "养分之符",
-   "item.urushi.mountain_creation_jufu": "造山之符",
+   "item.urushi.mountain_creation_jufu": "山地形成之符",
    "item.urushi.fluid_erasion_jufu": "旱魃之符",
-   "item.urushi.spike_jufu": "棘刺之符",
-   "item.urushi.freezing_jufu": "静冻之符",
+   "item.urushi.spike_jufu": "棘之符",
+   "item.urushi.freezing_jufu": "冻结之符",
    "item.urushi.visualization_goggles": "灵力观测镜",
    "info.urushi.visualization_goggles": "装备时可以观测到灵力传输的路径",
-   "info.urushi.jufu_stamp1": "Solving puzzles in the structure of the wood circle, you can get one of the之符印章s corresponding to the color of the puzzle you have aligned.",
-   "info.urushi.jufu_stamp2": "This stamp remains when crafting a 咒符 with a Element Alter.",
-   "info.urushi.reiryoku_cost": "Required Reiryoku Amount :",
-   "info.urushi.knockback_jufu1": "Blow mobs far away.",
-   "info.urushi.jump_jufu1": "Launch mobs and inflict fall damage.",
-   "info.urushi.liana_jufu1": "Build a wall instantly.",
-   "info.urushi.lava_generation_jufu1": "Generate Lava at the point of impact.",
-   "info.urushi.growth_jufu1": "Give bonemeal effect to blocks in an area of 11×11×11.",
-   "info.urushi.mountain_creation_jufu1": "Produce a sphere of Dirt and let it fall.",
-   "info.urushi.mountain_creation_jufu2": "It is useful for creating mountains and manipulating the shape of the land.",
-   "info.urushi.fluid_erasion_jufu1": "Erase fluids in an area of 11×11.",
-   "info.urushi.spike_jufu1": "Generate metal spikes and hurts mobs.",
-   "info.urushi.spike_jufu2": "If a player is within about 25 blocks of a spike, damage from the spike is treated as an attack by the player, and the player can get rare drops and experience.",
-   "info.urushi.freezing_jufu1": "Holds mobs for 5 seconds.",
-   "block.urushi.green_tatami_slab": "Green Tatami Slab",
-   "block.urushi.brown_tatami_slab": "Brown Tatami Slab",
-   "block.urushi.sand_coast_slab": "Sand Coast Slab",
-   "block.urushi.sand_coast_stairs": "Sand Coast Stairs",
-   "block.urushi.kakuriyo_portal": "Kakuriyo Portal",
-   "block.urushi.element_puzzle_controller_a": "Element Puzzle Controller (Left)",
-   "block.urushi.element_puzzle_controller_b": "Element PUzzle Controller (Center)",
-   "block.urushi.element_puzzle_controller_c": "Element Puzzle Controller (Right)",
-   "block.urushi.random_element_puzzle_block": "Random Element Puzzle Block",
-   "block.urushi.wood_element_puzzle_block": "Wood Element Puzzle Block",
-   "block.urushi.fire_element_puzzle_block": "Fire Element Puzzle Block",
-   "block.urushi.earth_element_puzzle_block": "Earth Element Puzzle Block",
-   "block.urushi.metal_element_puzzle_block": "Metal Element Puzzle Block",
-   "block.urushi.water_element_puzzle_block": "Water Element Puzzle Block",
-   "block.urushi.freezing_display": "Ice from Freezing之符",
-   "block.urushi.spike": "Spike Block"
+   "info.urushi.jufu_stamp1": "在幽世的木柱围圈中解谜，可以获得对应颜色的元素中的符刻印之一。",
+   "info.urushi.jufu_stamp2": "在使用祭坛合成咒符时，会返还符刻印",
+   "info.urushi.reiryoku_cost": "需要对应元素灵力：",
+   "info.urushi.knockback_jufu1": "击退击中的生物。",
+   "info.urushi.jump_jufu1": "把生物打击到空中并使其受到摔落伤害。",
+   "info.urushi.liana_jufu1": "建造一道树叶墙。",
+   "info.urushi.lava_generation_jufu1": "在击中的位置生成一处熔岩。",
+   "info.urushi.growth_jufu1": "对11×11×11的区域施加骨粉（不影响草方块）。",
+   "info.urushi.mountain_creation_jufu1": "从空中向击中的位置降下一整个泥土球。",
+   "info.urushi.mountain_creation_jufu2": "可以用来建造山峰或填埋地形。",
+   "info.urushi.fluid_erasion_jufu1": "清除11×11区域范围内的流体。",
+   "info.urushi.spike_jufu1": "从地下生成铁棘刺并对其上的生物造成伤害",
+   "info.urushi.spike_jufu2": "若有玩家位于铁棘刺附近25格范围内，则铁棘刺造成的伤害将视为玩家造成的，且生物死亡时会掉落经验及稀有掉落物等",
+   "info.urushi.freezing_jufu1": "令生物在5秒内无法移动",
+   "block.urushi.green_tatami_slab": "绿色榻榻米台阶",
+   "block.urushi.brown_tatami_slab": "棕色榻榻米台阶",
+   "block.urushi.sand_coast_slab": "砂墙台阶",
+   "block.urushi.sand_coast_stairs": "砂墙楼梯",
+   "block.urushi.kakuriyo_portal": "幽世传送门",
+   "block.urushi.element_puzzle_controller_a": "元素谜题操纵器（左）",
+   "block.urushi.element_puzzle_controller_b": "元素谜题操纵器（中）",
+   "block.urushi.element_puzzle_controller_c": "元素谜题操纵器（右）",
+   "block.urushi.random_element_puzzle_block": "随机元素谜题方块",
+   "block.urushi.wood_element_puzzle_block": "木气元素谜题方块",
+   "block.urushi.fire_element_puzzle_block": "火气元素谜题方块",
+   "block.urushi.earth_element_puzzle_block": "土气元素谜题方块",
+   "block.urushi.metal_element_puzzle_block": "金气元素谜题方块",
+   "block.urushi.water_element_puzzle_block": "水气元素谜题方块",
+   "block.urushi.freezing_display": "冻结之符冰",
+   "block.urushi.spike": "铁棘刺"
 
 }
