--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2535,17 +2535,17 @@
    "block.urushi.water_element_puzzle_block": "水气元素谜题方块",
    "block.urushi.freezing_display": "冻结之符冰",
    "block.urushi.spike": "铁棘刺",
-   "info.urushi.newer_version_released": "A new version of Urushi is released!",
-   "info.urushi.newer_version_released_hover": "Click here to open CurseForge Urushi web page.",
-   "info.urushi.silkworm_farm1": "Generate Cocoons from Silkworms and Leaves or Saplings.",
-   "info.urushi.silkworm_farm2": "Import Silkworms from top surface, import Leaves or Saplings from the side, and export Cocoons from bottom surface by using Hppers.",
-   "info.urushi.silkworm": "Generates in loot chests in spawner dungeons, villages, and in Kakuriyo dimension.",
-   "gui.jei.category.urushi.silkworm": "Sericulture",
-   "container.silkworm_farm": "Sericultural Block",
-   "block.urushi.silkworm": "Silkworm",
-   "block.urushi.silkworm_farm": "Sericultural Block",
-   "item.urushi.cocoon": "Cocoon",
-   "item.urushi.silk_thread": "Silk thread",
-   "item.urushi.ghost_spawn_egg": "Ghost Spawn Egg"
+   "info.urushi.newer_version_released": "发现了漆MOD的新版本！",
+   "info.urushi.newer_version_released_hover": "点击此处打开漆MOD的CurseForge页面。",
+   "info.urushi.silkworm_farm1": "通过消耗树叶或树苗以将蚕养成蚕茧",
+   "info.urushi.silkworm_farm2": "用漏斗从上面输入蚕，从侧面输入树叶或树苗，从下面输出蚕茧",
+   "info.urushi.silkworm": "在地牢、村庄或是幽界的箱子中生成",
+   "gui.jei.category.urushi.silkworm": "养蚕",
+   "container.silkworm_farm": "育蚕匾",
+   "block.urushi.silkworm": "蚕",
+   "block.urushi.silkworm_farm": "育蚕匾",
+   "item.urushi.cocoon": "蚕茧",
+   "item.urushi.silk_thread": "绢丝",
+   "item.urushi.ghost_spawn_egg": "鬼魂刷怪蛋"
 
 }
