--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2546,6 +2546,8 @@
    "block.urushi.silkworm_farm": "育蚕匾",
    "item.urushi.cocoon": "蚕茧",
    "item.urushi.silk_thread": "绢丝",
-   "item.urushi.ghost_spawn_egg": "鬼魂刷怪蛋"
+   "item.urushi.ghost_spawn_egg": "鬼魂刷怪蛋",
+   "block.urushi.red_seigaiha_fusuma": "红色青海波纸拉门",
+   "block.urushi.red_sayagata_fusuma": "红色丝绫纹纸拉门"
 
 }
