--- a/src/main/resources/assets/urushi/lang/ja_jp.json
+++ b/src/main/resources/assets/urushi/lang/ja_jp.json
@@ -2550,7 +2550,8 @@
    "item.urushi.silk_thread": "絹糸",
    "item.urushi.ghost_spawn_egg": "幽霊のスポーンエッグ",
    "block.urushi.red_seigaiha_fusuma": "赤色の青海波の襖",
-   "block.urushi.red_sayagata_fusuma": "赤色の紗綾形の襖"
+   "block.urushi.red_sayagata_fusuma": "赤色の紗綾形の襖",
+   "config.jade.plugin_urushi.block_element": "ブロックの元素"
    
    
 }
