--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2548,6 +2548,7 @@
    "item.urushi.silk_thread": "绢丝",
    "item.urushi.ghost_spawn_egg": "鬼魂刷怪蛋",
    "block.urushi.red_seigaiha_fusuma": "红色青海波纸拉门",
-   "block.urushi.red_sayagata_fusuma": "红色丝绫纹纸拉门"
+   "block.urushi.red_sayagata_fusuma": "红色丝绫纹纸拉门",
+   "config.jade.plugin_urushi.block_element": "元素"
 
 }
