fix for kusadango

--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -356,7 +356,7 @@
 
   "item.urushi.mitarashi_dango": "御手洗团子",
 
-  "item.urushi.kusa_dango": "青团",
+  "item.urushi.kusa_dango": "草团子",
 
   "item.urushi.bamboo_charcoal": "竹炭",
 
