--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -454,7 +454,7 @@
 
   "item.urushi.goldfish": "金鱼",
 
-  "block.urushi.blank_antique_fusuma": "古朴纸拉门",
+  "block.urushi.blank_antique_fusuma": "素色古朴纸拉门",
 
   "container.foxhopper": "改良漏斗",
 
