--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2556,7 +2556,7 @@
    "item.urushi.fried_shrimp": "炸虾",
    "item.urushi.shrimp_sushi": "鲜虾寿司",
    "entity.urushi.shrimp_sushi_food": "鲜虾寿司",
-   "info.urushi.doubled_wooden_cabinetry_sort_button": "Sort"
+   "info.urushi.doubled_wooden_cabinetry_sort_button": "整理"
 
 
 }
