--- a/src/main/resources/assets/urushi/lang/ja_jp.json
+++ b/src/main/resources/assets/urushi/lang/ja_jp.json
@@ -476,9 +476,9 @@
 
    "block.urushi.mesh_groove": "網付き側溝",
 
-   "block.urushi.thatched_roof_45": "茅の屋根(45°)",
+   "block.urushi.thatched_roof_45": "茅<かや>の屋根(45°)",
 
-   "block.urushi.thatched_roof_225": "茅の屋根(22.5°)",
+   "block.urushi.thatched_roof_225": "茅<かや>の屋根(22.5°)",
 
    "block.urushi.ibushi_kawara_roof_45": "いぶし瓦の屋根(45°)",
 
@@ -2564,12 +2564,50 @@
    "block.urushi.kakejiku_17": "掛け軸",
    "block.urushi.kakejiku_18": "掛け軸",
    "block.urushi.kakejiku_19": "掛け軸",
-   "block.urushi.tea_bush": "茶",
+   "block.urushi.tea_bush": "茶葉の茂み",
    "item.urushi.tea_leaf": "茶葉",
    "item.urushi.green_tea": "緑茶",
+   "block.urushi.hibachi": "火鉢",
    "block.urushi.kettle": "茶釜",
+   "container.urushi.kettle": "茶釜",
    "block.urushi.shiitake_block": "しいたけブロック",
-   "block.urushi.coin": "古銭"
-   
+   "block.urushi.coin": "古銭",
+   "info.urushi.kettle": "下に火鉢、焚き火、またはかまどを置いた状態で茶葉と水入り竹筒を入れよう",
+   "item.urushi.silk": "絹布<けんぷ>",
+   "item.urushi.white_silk": "白色の絹布<けんぷ>",
+   "item.urushi.orange_silk": "橙色の絹布<けんぷ>",
+   "item.urushi.magenta_silk": "赤紫色の絹布<けんぷ>",
+   "item.urushi.light_blue_silk": "空色の絹布<けんぷ>",
+   "item.urushi.yellow_silk": "黄色の絹布<けんぷ>",
+   "item.urushi.lime_silk": "黄緑色の絹布<けんぷ>",
+   "item.urushi.pink_silk": "桃色の絹布<けんぷ>",
+   "item.urushi.gray_silk": "灰色の絹布<けんぷ>",
+   "item.urushi.light_gray_silk": "薄灰色の絹布<けんぷ>",
+   "item.urushi.cyan_silk": "青緑色の絹布<けんぷ>",
+   "item.urushi.purple_silk": "紫色の絹布<けんぷ>",
+   "item.urushi.blue_silk": "青色の絹布<けんぷ>",
+   "item.urushi.brown_silk": "茶色の絹布<けんぷ>",
+   "item.urushi.green_silk": "緑色の絹布<けんぷ>",
+   "item.urushi.red_silk": "赤色の絹布<けんぷ>",
+   "item.urushi.black_silk": "黒色の絹布<けんぷ>",
+   "block.urushi.silk_block": "絹布ブロック",
+   "block.urushi.white_silk_block": "白色の絹布ブロック",
+   "block.urushi.orange_silk_block": "橙色の絹布ブロック",
+   "block.urushi.magenta_silk_block": "赤紫色の絹布ブロック",
+   "block.urushi.light_blue_silk_block": "空色の絹布ブロック",
+   "block.urushi.yellow_silk_block": "黄色の絹布ブロック",
+   "block.urushi.lime_silk_block": "黄緑色の絹布ブロック",
+   "block.urushi.pink_silk_block": "桃色の絹布ブロック",
+   "block.urushi.gray_silk_block": "灰色の絹布ブロック",
+   "block.urushi.light_gray_silk_block": "薄灰色の絹布ブロック",
+   "block.urushi.cyan_silk_block": "青緑色の絹布ブロック",
+   "block.urushi.purple_silk_block": "紫色の絹布ブロック",
+   "block.urushi.blue_silk_block": "青色の絹布ブロック",
+   "block.urushi.brown_silk_block": "茶色の絹布ブロック",
+   "block.urushi.green_silk_block": "緑色の絹布ブロック",
+   "block.urushi.red_silk_block": "赤色の絹布ブロック",
+   "block.urushi.black_silk_block": "黒色の絹布ブロック",
+   "item.urushi.kakuriyo_villager_spawn_egg": "幽世<かくりよ>の村人のスポーンエッグ",
+   "entity.urushi.kakuriyo_villager": "幽世<かくりよ>の村人"
    
 }
